# ds_toolbox_public

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readme.md  requirement.txt  requirement__dBricks.txt  requirements.txt  setup.cfg
doc/: common_funcs.html  io_funcs_msql_local.html  ml_funcs.html
dsToolbox/: __init__.py  cl_funcs.py  common_funcs.py  config.yml  io_funcs.py  io_funcs2.py  io_funcs_colab.py  io_funcs_kaggle2colab.py  io_funcs_msql_local.py  ml_funcs.py  ml_funcs_sub.py  nlp_llm_funcs.py  prompt_refactoring_codes  rag_funcs.py  spark_funcs.py  sql_template.yml
dsToolbox/beta/: README.md  common_funcs.py  default_values.py  ml_funcs.py  nlp_llm_funcs.py  spark_funcs.py  utilities.py
dsToolbox/beta/examples/: quick_start_tutorial.py
dsToolbox/beta/io/: __init__.py  config.py  databases.py  io_funcs_allin1.py
dsToolbox/doc/: common_funcs.html  examples__dBricks.py  io_funcs.html  io_funcs__summary.xlsx  ml_funcs.html  nlp_llm_funcs.html
dsToolbox/io/: aws.py  azure.py  kaggle.py  snowflake.py  test_performance.py
dsToolbox/under_Edition/: common_funcs_new__under_edition.py
dsToolbox/under_Edition/refactored_old/: io_funcs_colab_refactored.py  io_funcs_msql_local_refactored.py  io_funcs_refactored.py
dsToolbox/under_Edition/refactored_old/oop/: common_funcs_refactored.py  io_funcs_msql_local_refactored.py  io_funcs_refactored.py  ml_funcs_refactored.py
dsToolbox/under_Edition/ver2/: cl_funcs.py  ml_funcs copy.py
under_edition/: io_funcs_MSqlServer.py  requirements_outdated.txt  requirments_outdated.yml  setup_script.py
(+2 files in other folders)
