[metadata]
name                          = dsToolbox
version                       = 0.2.0
author                        = Reza Nourzadeh
author_email                  = reza.nourzadeh@gmail.com
description                   = The package contains functions for reading/writing data plotting and machine learning.
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/ExxonMobil/dsToolbox.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True